# PCB11

./: .gitignore  README.md  pyproject.toml  requirements.txt  unique.py  verify_dino_integration.py
data/behaviour/: CategoryValidationExpt.txt  syns_images_to_download.csv
data/meg/: Info  stimulus_order.csv  time.mat
docs/: current_pipeline_baseline.md  feature_clustering.md  feature_extraction_explained.md  pipeline_status_and_limitations.md
features/: file_names.txt
features/baseline/: file_names.txt  layer_classifier_2.npy  layer_classifier_5.npy  layer_classifier_6.npy  layer_features_12.npy
scripts/: 1_extract_features.py  2_compute_rdms.py  3_compute_rsa.py  4_plot_results.py  5_extract_behavior_labels.py  check_dims.py  cluster_features.py  compute_rdms.py  download_imagenet_samples.py  export_meg_bundle.py  extract_features.py  extract_resnet50_blockrelu.sh  plot_meg_rdms.py  prepare_meg_assets.py  rsa.py  rsa_analysis.py  run_meg_ann_rsa.py  run_pipeline.py  visualize_rdms.py
src/pcb11/: __init__.py  cluster_features.py  data_utils.py  features.py  features_cli.py  meg_assets.py  meg_bundle.py  pipeline.py  pipeline_clean.py  rsa_outputs.py
tmp/pdfs/: Category_systems_for_real_world_scenes.txt  Cortial_Encoding_of_Spatial_Structure_and_Semantic_Content_in_3d.txt  LSTprojB_Topic11_FirstMeeting.txt  SYNS_dataset_Statistics_of_surface_attitude.txt  cichy2016.txt
